chained item, with bug

--- a/SPM/code/Makefile
+++ b/SPM/code/Makefile
@@ -1,6 +1,6 @@
 CC=g++-5
 FLAGS=-O3 --std=c++11 -pthread -DDEBUG=false -Wall -Werror
-VASIM=../../VASim
+VASIM=../../../VASim
 MNRL=$(VASIM)/libs/MNRL/C++
 LIBMNRL=$(MNRL)/libmnrl.a
 PUGI=$(VASIM)/libs/pugixml/src
@@ -15,4 +15,11 @@ log:
 	$(CC) $(IDIRS) $(FLAGS) $(CCFILES) $(LIBVASIM) $(LIBMNRL) > log.txt 2>&1
 
 test:
-	ls ./include
+	./spm r 4 4 2 --NO
+	./spm r 4 4 2 --NC
+	./spm r 4 4 2
+
+clean:
+	@rm -f spm
+	@rm -f *.mnrl
+	@rm -f *.anml
