Updating levenshtein code to emit reduced levenshtein automata if desired.

--- a/Levenshtein/code/Makefile
+++ b/Levenshtein/code/Makefile
@@ -1,9 +1,9 @@
 CC=g++-5
 FLAGS=-O3 --std=c++11 -pthread -DDEBUG=false
-VASIM=../VASim
-MNRL=$(VASIM)/MNRL/C++
+VASIM=../../../VASim
+MNRL=$(VASIM)/libs/MNRL/C++
 LIBMNRL=$(MNRL)/libmnrl.a
-PUGI=$(VASIM)/pugixml-1.6/src
+PUGI=$(VASIM)/libs/pugixml/src
 LIBVASIM=$(VASIM)/libvasim.a
 IDIRS=-I $(VASIM)/include -I $(MNRL)/include -I $(PUGI)
 
